--- a/_posts/2018-3-2-story.md
+++ b/_posts/2018-3-2-story.md
@@ -3,4 +3,4 @@ layout: home-page
 title: 
 ---
 
-Using basic coding concepts, work with your team to solve a variety of problems to get out of the escape room! In this workshop, you will learn main logic structure for code, what an API is, and how to change the look of a website. With these new tools and a few clues, you will work through a series of puzzles to escape the Room of Code!
+Using basic coding concepts, work with your team to solve a variety of problems to escape the ocean! In this workshop, you will learn main logic structure for code, what an API is, and how to change the look of a website. With these new tools and a few clues, you will work through a series of puzzles to escape the ocean and unlock a special prize!
